ADD canvas banner

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     background-color: gray;
 }
 
+#bannerCanvas {
+
+}
+
 .buttonContainer {
     display: flex;
     flex-direction: column;
